@@ -27,6 +27,10 @@ var editHostDetailsObj = {
     hostId: null
 }
 
+$("#modal-hosts-edit").on("hide.bs.modal", function(){
+    $("#modal-hosts-edit #alias").val("");
+});
+
 $("#modal-hosts-edit").on("shown.bs.modal", function(){
     if(!$.isNumeric(editHostDetailsObj.hostId)){
         makeToastr(JSON.stringify({state: "error", message: "Developer Fail - Please provide host id"}));
