@@ -22,6 +22,7 @@ Changed
     Indicate cluster groups & standalone hosts on storage
     Indicate cluster groups & standalone hosts on networks
     Indicate cluster groups & standalone hosts on projects
+    Clear modals on hidden (#164)
 
 Fixed
     Cant create a container with no devices (#158)
